# Carbon_Credit_Exchange

./: .gitignore  Anchor.toml  README.md  programs
.key/: admin-keypair.json
backend/: .env.example  .gitignore  MONGODB_SETUP.md  package.json  test-upload.js  tsconfig.json
backend/src/: index.ts
backend/src/config/: database.ts  solana.config.ts
backend/src/controllers/: carbonCreditController.ts  marketplaceController.ts  metadataController.ts  uploadController.ts
backend/src/models/: carbonCredit.ts  marketplaceListing.ts  transaction.ts  user.ts
backend/src/routes/: carbonCreditRoutes.ts  marketplaceRoutes.ts  metadataRoutes.ts  uploadRoutes.ts
backend/src/services/: solanaService.ts
contracts/carbon-credit-exchange/: Cargo.toml  package.json
contracts/carbon-credit-exchange/programs/carbon-credit-exchange/: Cargo.toml
contracts/carbon-credit-exchange/programs/carbon-credit-exchange/src/: error.rs  events.rs  lib.rs  state.rs
contracts/carbon-credit-exchange/programs/carbon-credit-exchange/src/instructions/: buy_carbon_credit.rs  cancel_listing.rs  initialize.rs  list_for_sale.rs  mint_carbon_credit.rs  mod.rs  retire_carbon_credit.rs
frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx  vite-env.d.ts
frontend/src/components/: FloatingCard.jsx  Header.jsx  HeroSection.jsx  HeroSection.tsx  ImpactStats.tsx
frontend/src/components/home-page/: CategoriesTabs.tsx  FloatingCard.tsx  HeroSection.tsx  HeroTextSection.tsx  HowItWorks.tsx  ImageCardSection.tsx  ImpactStats.tsx  InfoSection.tsx  MoreInfor.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/mint-page/: HeroMint.tsx  MintCredit.tsx  MintProgression.tsx
frontend/src/components/my-nft-page/: MyNftCard.tsx
frontend/src/components/trading-page/: Collection.tsx  CollectionCard.tsx  HowToTrade.tsx  MarketStats.tsx
frontend/src/config/: constants.js
frontend/src/constant/: mockData.ts
frontend/src/contexts/: ToastContext.tsx  WalletContext.tsx  index.ts
frontend/src/data/: mocks.ts
frontend/src/idl/: carbon_credit_exchange.json
frontend/src/layouts/: Layout.tsx
frontend/src/lib/: axios.ts  ipfs.ts  marketplaceApi.ts  mintNft.ts  solanaClient.ts  utils.ts
frontend/src/pages/: APITest.jsx  HomePage.jsx  HomePage.tsx  MintNFT.jsx  MintNFT.tsx  MyNFTs.tsx  NFTDetails.tsx  Trading.jsx  Trading.tsx  Trading2.tsx  VerifyCredits.jsx  VerifyCredits.tsx
frontend/src/services/: api.js  carbonCreditService.ts  homeData.ts  index.ts  marketplaceService.ts  metadata.js  metaplex.ts  solana.js
frontend/src/temp/: NFTDetails.tsx
frontend/src/types/: carbonCredit.ts  collection.types.ts  index.ts  marketplaceListing.ts
scripts/: check-exchange.ts  check-freeze-authority.ts  initialize-exchange.ts  mint-test-nfts.ts  minted-nfts.json  package-lock.json  package.json  test-mint.ts  tsconfig.json
(+2 files in other folders)
