[workspace]
members = [
    "programs/carbon-credit-exchange",
]
resolver = "2"

[workspace.dependencies]
# Anchor 0.29.0 - stable version (without idl-build to avoid spl-token conflicts)
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

# SPL Token programs tương thích
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"

# Metaplex Token Metadata
mpl-token-metadata = "4.1.2"

# Serialization
borsh = "0.10.3"

# Error handling
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1