[package]
name = "carbon-credit-exchange"
version = "0.1.0"
description = "Carbon Credit Exchange - A NFT marketplace for carbon credits on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon_credit_exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }
solana-program = "~1.16.0"