[package]
name = "carbon-credit-exchange"
version = "0.1.0"
description = "Carbon Credit Exchange - A NFT marketplace for carbon credits on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon_credit_exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
borsh = { workspace = true }
thiserror = { workspace = true }